--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="./img/seaOfThoughts.jpg" alt="First slide">
+                <img class="d-block w-100" src="./img/seaOfThoughts.JPG" alt="First slide">
                 <div class="carousel-caption">
                   <div class="card p-2 my-2" style="color:rgb(61, 61, 61);">
                     <h5>Sea of Thoughts</h5>
