--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,9 @@
           <li class="nav-item">
             <a class="nav-link" href="./projects.html">Projects</a>
           </li>
+          <li class="nav-item">
+                  <a class="nav-link" href="./mypage.html">My Page</a>
+          </li>
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item" >
